--- a/src/MonoBuild.Core/MonoBuild.Core.csproj
+++ b/src/MonoBuild.Core/MonoBuild.Core.csproj
@@ -10,6 +10,7 @@
     <PackageReference Include="FluentResults" Version="3.15.0" />
     <PackageReference Include="LibGit2Sharp" Version="0.26.2" />
     <PackageReference Include="Microsoft.Extensions.FileSystemGlobbing" Version="7.0.0" />
+    <PackageReference Include="System.IO.Abstractions" Version="19.1.13" />
   </ItemGroup>
 
 </Project>
