--- a/src/MonoBuild.Test.Unit/MonoBuild.Test.Unit.csproj
+++ b/src/MonoBuild.Test.Unit/MonoBuild.Test.Unit.csproj
@@ -12,6 +12,9 @@
     <PackageReference Include="FluentAssertions" Version="6.9.0" />
     <PackageReference Include="FluentResults" Version="3.15.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.3.2" />
+    <PackageReference Include="Moq" Version="4.18.4" />
+    <PackageReference Include="System.IO.Abstractions" Version="19.1.13" />
+    <PackageReference Include="System.IO.Abstractions.TestingHelpers" Version="19.1.13" />
     <PackageReference Include="xunit" Version="2.4.2" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.5">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
