--- a/.github/workflows/hugo.yml
+++ b/.github/workflows/hugo.yml
@@ -60,7 +60,7 @@ jobs:
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v1
         with:
-          path: ./public
+          path: ./doc-site/public
 
   # Deployment job
   deploy:
