--- a/doc-site/config.toml
+++ b/doc-site/config.toml
@@ -5,3 +5,12 @@ theme = "hugo-theme-learn"
 [params]
   # Change default color scheme with a variant one. Can be "red", "blue", "green".
   themeVariant = "blue"
+
+[Languages]
+[Languages.en]
+
+[[Languages.en.menu.shortcuts]]
+name = "<i class='fab fa-fw fa-github'></i> GitHub repo"
+identifier = "ds"
+url = "https://github.com/JohnEffo/MonoBuild"
+weight = 10
