--- a/src/MonoBuild.CLI/MonoBuild.CLI.csproj
+++ b/src/MonoBuild.CLI/MonoBuild.CLI.csproj
@@ -1,16 +1,27 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net7.0</TargetFramework>
+    <PackageVersion>1.0.1</PackageVersion>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <AssemblyName>MonoBuild</AssemblyName>
+    <PackAsTool>true</PackAsTool>
+    <ToolCommandName>monobuild</ToolCommandName>
+    <PackageReadmeFile>readme.md</PackageReadmeFile>
+    <PackageProjectUrl>https://github.com/JohnEffo/MonoBuild/</PackageProjectUrl>
+    <PackageOutputPath>./nupkg</PackageOutputPath>  
+    <PackageLicenseExpression>MIT</PackageLicenseExpression>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="FluentResults" Version="3.15.0" />
     <PackageReference Include="System.CommandLine" Version="2.0.0-beta4.22272.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+      <None Include="../../readme.md" Pack="true" PackagePath="readme.md"/>
   </ItemGroup>
 
   <ItemGroup>
